2818-11-20: GCVideo-DVI version 2.4c
- fix audio scaling

2018-09-14: GCVideo-DVI version 2.4b
- fix a slight chroma shift in YCbCr-to-RGB conversion

2017-12-10: GCVideo-DVI version 2.4a
- fix audio issues introduced by 2.4 for some board configurations
- ensure that the mode popup is always shown with correct colors

2017-10-03: GCVideo-DVI version 2.4
- brightness/contrast/saturation controls in OSD
- add support for dual video output (DVI+parallel RGB, etc. for a DAC)

2016-09-20: GCVideo-DVI version 2.3
- enable IR remote in shuriken/shuriken-v3 builds
- fix a bug that caused OSD CPU hangs on startup

2016-08-14: GCVideo-DVI version 2.2
- Wii version
- add IR remote support to the OSD for p2xh builds

2015-11-22: GCVideo-DVI version 2.1
- audio volume option
- Sync timing fix for enhanced DVI mode

2015-08-21: GCVideo-DVI version 2.0
- Enhanced DVI mode
- optional output disable on mode switch

2015-06-06: GCVideo-DVI version 1.3 and GCVideo Lite [needs-a-version-number]
- Improved SPDIF compatibility

2015-05-17: GCVideo-DVI version 1.2:
- Modify pad snoop timing to support certain NES-to-Gamecube adapters

2015-04-04: GCVideo-DVI version 1.1
- Add OSD and SPDIF audio output

FIXME: Add older entries based on git log